# IngestForge

./: .env.example  .gitignore  .ingestforge-security.yaml  .pre-commit-config.yaml  IngestForge.bat  IngestForgeGUI.bat  LICENSE  QUICK_START.md  README.md  Start_API.bat  Start_Frontend.bat  Start_Portal_Dev.bat  ingestforge.yaml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  lint.yml  security.yml
docs/: API.md  AUTOMATED_SYNC.md  BUILD_GUIDE.md  CLI_MENU_REDESIGN.md  README.md  SECURITY_SETUP.md  api-reference.md  cli.md  conf.py  configuration.md  docker.md  faq.md  index.md  index.rst  requirements.txt  troubleshooting.md
docs/api/: core.rst  enrichment.rst  ingest.rst  llm.rst  query.rst  retrieval.rst  storage.rst
docs/architecture/: ADR-001-hexagonal-architecture.md  ADR-002-hybrid-retrieval.md  ADR-003-semantic-chunking.md  ADR-004-citation-provenance.md  ADR-005-ienricher-interface.md  ADR-006-llm-retry-consolidation.md  ADR-TEMPLATE.md  ARCHITECTURE.md  REPOSITORY_GUIDE.md  overview.rst
docs/features/: AUTHOR_METADATA.md
docs/guides/: AGENT_USAGE.md  COMMAND_REFERENCE.md  FEATURE_TEMPLATE.md  GETTING_STARTED.md  ONBOARDING.md  YOUTUBE_INGESTION.md
docs/specs/: ACCURACY_FRAMEWORK.md  API_IMPLEMENTATION_PLAN.md  AUDIT_TRAIL_DESIGN.md  AUTH_FLOW_SPEC.md  FORGE_PACK_GUIDE.md  FRONTEND_ARCH_SPEC.md  FRONTEND_PERF_SPEC.md  TECH_SPEC_AGENTIC_CORE.md  TECH_SPEC_AIR_GAP.md  TECH_SPEC_API_BRIDGE.md  TECH_SPEC_CI_CD_JPL.md  TECH_SPEC_FORGE_REGISTRY.md  TECH_SPEC_INTEGRATION_BRIDGE.md  TECH_SPEC_JS_RENDERING.md  TECH_SPEC_KNOWLEDGE_GRAPH.md  TECH_SPEC_OCR_SPATIAL.md  TECH_SPEC_PERFORMANCE_PRESETS.md  TECH_SPEC_SYNC_COLLAB.md  TESTING_STRATEGY.md
docs/user-guide/: agent-missions.md  getting-started.md  workflows.md
examples/: EXAMPLES_GUIDE.md  README.md  agent_llm_adapter_demo.py  code_intelligence_demo.py  evidence_linker_demo.py  requirements.txt  vlm_escalation_example.py
examples/academic/: __init__.py  arxiv_research_assistant.py  concept_extraction.py  literature_review.py  paper_summarizer.py
examples/advanced/: __init__.py  batch_processing.py  custom_enrichment.py  multi_source_integration.py  vector_migration.py
examples/code/: __init__.py  api_reference.py  code_search.py  codebase_documenter.py  dependency_analyzer.py
examples/knowledge/: __init__.py  meeting_notes.py  personal_wiki.py  research_database.py  timeline_builder.py
examples/learning/: __init__.py  flashcard_generator.py  quiz_builder.py  study_package.py  textbook_processor.py
examples/quickstart/: 01_basic_ingestion.py  02_simple_search.py  03_generate_flashcards.py  04_code_documentation.py  __init__.py
frontend/: jest.config.js  jest.setup.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vitest.config.ts
frontend/coverage/: clover.xml  coverage-final.json  lcov.info
ingestforge/: __init__.py  __main__.py
ingestforge/agent/: README_DEBATE_ADAPTER.md  README_LLM_ADAPTER.md  __init__.py  attack_mapper.py  brief_generator.py  brief_models.py  case_conflict.py  debate_adapter.py  domain_router.py  domain_tools.py  fact_checker.py  knowledge_tools.py  knowledge_tools_template.py  legal_classifier.py  llm_adapter.py  paper_summarizer.py  personas.py  proactive_scout.py  react_engine.py  react_grammar.py  self_correction.py  tool_registry.py  verification_ui.py  vision_tools.py  web_tools.py
ingestforge/analysis/: __init__.py  corpus_stats.py  doctrine_client.py  feature_analyzer.py  lateral_linker.py  metrics.py  similarity_window.py  story_generator.py  style_critique.py  timeline_builder.py
ingestforge/api/: README.md  __init__.py  bridge.py  main.py
ingestforge/chat/: __init__.py  service.py
ingestforge/chunking/: README.md  __init__.py  adaptive_slicer.py  citation_chunker.py  code_chunker.py  deduplicator.py  header_chunker.py  layout_chunker.py  legal_chunker.py  nlp_boundary.py  quality_scorer.py  semantic_chunker.py  size_optimizer.py  topic_chunker.py  tree_sitter_chunker.py
scripts/: build_binary.py  generate_admin_hash.py  install.bat  install.py  install.sh  jpl_lint.py  package_installers.py
tests/: __init__.py  conftest.py
(+1405 files in other folders)
