[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ingestforge"
version = "1.2.0"
description = "Modular document processing and RAG framework following NASA JPL's Power of Ten coding rules"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "IngestForge Contributors"}
]
keywords = ["rag", "cli", "document-processing", "retrieval", "embeddings", "llm", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]

dependencies = [
    "pyyaml>=6.0.1",
    "pydantic>=2.6.0",
    "watchdog>=4.0.0",
    "typer>=0.9.0",
    "click>=8.0.0,<8.2.0",
    "rich>=13.7.0",
    "questionary>=2.0.0",
    "pymupdf>=1.23.0",
    "python-docx>=1.1.0",
    "ebooklib>=0.18",
]

[project.optional-dependencies]
# Vector store and embeddings
embeddings = [
    "sentence-transformers>=2.3.0",
    "chromadb>=0.4.24",
]

# LLM providers
llm = [
    "anthropic>=0.21.0",
    "openai>=1.12.0",
    "google-generativeai>=0.4.0",
]

# PostgreSQL vector storage
postgres = [
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.4",
]

# API server
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]

# Development tools
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.5.0",
    "mypy>=1.0.0",
    "pylint>=2.17.0",
    "httpx>=0.27.0",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.31.0",
]

# Benchmarking tools
benchmark = [
    "pytest>=7.0.0",
    "reportlab>=4.0.0",  # PDF generation for tests
    "python-docx>=1.1.0",  # DOCX generation
    "numpy>=1.24.0",  # For embeddings
]

# YouTube transcript ingestion
youtube = [
    "youtube-transcript-api>=0.6.0",
]

# Audio transcription (TICKET-201)
audio = [
    "faster-whisper>=1.0.0",
    "pydub>=0.25.1",
]

# Research discovery APIs (RES-002)
research = [
    "arxiv>=2.1.0",
]

# All optional features
all = [
    "sentence-transformers>=2.3.0",
    "chromadb>=0.4.24",
    "anthropic>=0.21.0",
    "openai>=1.12.0",
    "google-generativeai>=0.4.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "youtube-transcript-api>=0.6.0",
    "faster-whisper>=1.0.0",
    "pydub>=0.25.1",
    "arxiv>=2.1.0",
]

[project.scripts]
ingestforge = "ingestforge.cli.main:app"

[project.urls]
Homepage = "https://github.com/joshuatshirley/IngestForge"
Documentation = "https://github.com/joshuatshirley/IngestForge#readme"
Repository = "https://github.com/joshuatshirley/IngestForge"

[tool.setuptools.packages.find]
where = ["."]
include = ["ingestforge*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=ingestforge --cov-report=term-missing"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "requires_api: marks tests that require external API access",
    "requires_model: marks tests that require ML models",
    "benchmark: performance benchmark tests",
    "slow_benchmark: slow performance tests (>10s)",
    "memory_intensive: tests requiring >1GB memory",
    "requires_gpu: tests requiring GPU acceleration",
]
filterwarnings = [
    # US-506c: Suppress ChunkRecord/SemanticChunk deprecation in tests during migration
    "ignore:ChunkRecord is deprecated:DeprecationWarning",
    "ignore:SemanticChunk is deprecated:DeprecationWarning",
]
